--- a/templates/example.html
+++ b/templates/example.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ name }}. Лабораторная работа {{ lab_number }}</title>
+    <title>
+        {% if name %}{{ name }}{% else %}Анонимус{% endif %}
+        {% if lab_number %}. Лабораторная работа {{ lab_number }}{% endif %}
+    </title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
     <header>
-        WEB-программирование, часть 2. Лабораторная работа {{ lab_number }}
+        WEB-программирование, часть 2
+        {% if lab_number %}Лабораторная работа {{ lab_number }}{% endif %}
     </header>
 
     <main>
@@ -22,7 +26,11 @@
     </main>
 
     <footer>
-        &copy; {{ name }}, {{ group }}, {{ course }}, 2025
+        &copy; 
+        {% if name %}{{ name }}{% else %}Анонимус{% endif %}, 
+        {% if group %}{{ group }}{% else %}Группа не указана{% endif %}, 
+        {% if course %}{{ course }} курс{% else %}Курс не указан{% endif %}, 
+        2025
     </footer>
 </body>
 </html>
