--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <div style="float: right; margin-top: 10px;">
+            <a href="/" style="color: white; text-decoration: none; background: rgba(255,255,255,0.2); padding: 5px 10px; border-radius: 3px;">На главную</a>
+        </div>
         WEB-программирование, часть 2. {{ self.lab() }}
     </header>
     <main>
