--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -14,6 +14,7 @@
     <ol>
         <li><a href="/lab3/cookie">Куки</a></li>
         <li><a href="/lab3/del_cookie">Удалить куки</a></li>
+        <li><a href="/lab3/form1.html">Форма</a></li>
     </ol>
 </body>
 </html>
