--- a/templates/base.html
+++ b/templates/base.html
@@ -112,6 +112,12 @@
             background-color: #3498db;
             color: white;
         }
+
+        .error {
+            color: red;
+            font-size: 0.9em;
+            margin-left: 10px;
+        }
     </style>
 </head>
 <body>
