--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -15,6 +15,7 @@
         <li><a href="/lab3/cookie">Куки</a></li>
         <li><a href="/lab3/del_cookie">Удалить куки</a></li>
         <li><a href="/lab3/form1.html">Форма</a></li>
+        <li><a href="/lab3/order">Заказ напитка</a></li>
     </ol>
 </body>
 </html>
