--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -16,6 +16,7 @@
         <li><a href="/lab3/del_cookie">Удалить куки</a></li>
         <li><a href="/lab3/form1.html">Форма</a></li>
         <li><a href="/lab3/order">Заказ напитка</a></li>
+        <li><a href="/lab3/settings">Настройки стилей</a></li>
     </ol>
 </body>
 </html>
