--- a/templates/lab2/berries.html
+++ b/templates/lab2/berries.html
@@ -10,7 +10,7 @@
         {% for berry in berries %}
         <div style="border: 1px solid #ddd; border-radius: 10px; padding: 15px; text-align: center; background-color: #f9f9f9;">
             <div style="height: 200px; display: flex; align-items: center; justify-content: center; margin-bottom: 15px;">
-                <img src="{{ url_for('static', filename='kartinki/' + berry.image) }}" 
+                <img src="{{ url_for('static', filename='lab2/' + berry.image) }}" 
                      alt="{{ berry.name }}" 
                      style="max-height: 180px; max-width: 100%; border-radius: 5px;">
             </div>
