--- a/templates/start.html
+++ b/templates/start.html
@@ -9,7 +9,7 @@
         <nav>
             <ul>
                 <li><a href="/lab2/">Лабораторная работа 2</a></li>
-                <li><a href="/lab3/">Лабораторная работа 3</a></li>  <!-- Добавляем эту строку -->
+                <li><a href="/lab3/">Лабораторная работа 3</a></li>  
             </ul>
         </nav>
     </header>
