--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -25,6 +25,8 @@
         <li><a href="/lab3/form1">Форма пользователя</a></li>
         <li><a href="/lab3/order">Заказ напитка</a></li>
         <li><a href="/lab3/settings">Настройки стилей</a></li>
+        <li><a href="/lab3/ticket">Железнодорожный билет</a></li>
+        <li><a href="/lab3/clear_settings">Очистить настройки стилей</a></li>
     </ol>
 </body>
 </html>
