--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -27,6 +27,7 @@
         <li><a href="/lab3/settings">Настройки стилей</a></li>
         <li><a href="/lab3/ticket">Железнодорожный билет</a></li>
         <li><a href="/lab3/clear_settings">Очистить настройки стилей</a></li>
+        <li><a href="/lab3/search">Поиск товаров</a></li>
     </ol>
 </body>
 </html>
