--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -12,5 +12,6 @@
         <li><a href="/lab4/sub-form">Вычитание</a></li>
         <li><a href="/lab4/pow-form">Возведение в степень</a></li>
         <li><a href="/lab4/tree">Посадка деревьев</a></li>
+        <li><a href="/lab4/login">Авторизация</a></li>
     </ol>
 {% endblock %}
