--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -14,4 +14,14 @@
         <li><a href="/lab4/tree">Посадка деревьев</a></li>
         <li><a href="/lab4/login">Авторизация</a></li>
     </ol>
+
+    <div style="margin-top: 20px; background-color: #f5f5f5; padding: 15px; border-radius: 5px;">
+        <h3>Тестовые пользователи:</h3>
+        <ul>
+            <li><strong>alex</strong> / 123</li>
+            <li><strong>bob</strong> / 555</li>
+            <li><strong>admin</strong> / admin</li>
+            <li><strong>user</strong> / pass</li>
+        </ul>
+    </div>
 {% endblock %}
