--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -22,6 +22,7 @@
             <li><strong>bob</strong> / 555</li>
             <li><strong>admin</strong> / admin</li>
             <li><strong>user</strong> / pass</li>
+            <li><strong>anna</strong> / anna (Анна Иванова)</li>
         </ul>
     </div>
 {% endblock %}
