--- a/templates/lab4/login.html
+++ b/templates/lab4/login.html
@@ -4,7 +4,7 @@
 
 {% block main %}
     {% if authorized %}
-        <h1>Добро пожаловать, {{ login }}!</h1>
+        <h1>Добро пожаловать, {{ name }}!</h1>
         <div>
             <form action="/lab4/logout" method="post">
                 <button type="submit">Выход</button>
@@ -16,13 +16,17 @@
         <form method="post">
             <div>
                 <label for="login">Пользователь:</label>
-                <input type="text" id="login" name="login">
+                <input type="text" id="login" name="login" value="{{ login_value or '' }}">
             </div>
             <div>
                 <label for="password">Пароль:</label>
                 <input type="password" id="password" name="password">
             </div>
-            <div style="color: red;">{{ error }}</div>
+            {% if error %}
+            <div style="color: #d32f2f; font-weight: bold; background-color: #ffebee; padding: 10px; border-radius: 5px; border: 1px solid #f44336;">
+                {{ error }}
+            </div>
+            {% endif %}
             <div>
                 <button type="submit">Войти</button>
                 <button type="reset">Отмена</button>
