--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -14,7 +14,10 @@
         <li><a href="/lab4/tree">Посадка деревьев</a></li>
         <li><a href="/lab4/login">Авторизация</a></li>
         <li><a href="/lab4/fridge">Холодильник</a></li>
-        <li><a href="/lab4/grain">Заказ зерна</a></li> 
+        <li><a href="/lab4/grain">Заказ зерна</a></li>
+        <li><a href="/lab4/register">Регистрация</a></li>
+        {% if session.get('login') %}
+        <li><a href="/lab4/users">Список пользователей</a></li>
 
     </ol>
 
