--- a/templates/lab5/edit_article.html
+++ b/templates/lab5/edit_article.html
@@ -3,7 +3,7 @@
 {% block lab %}Лабораторная работа 5{% endblock %}
 
 {% block main %}
-    <h1>Создание статьи</h1>
+    <h1>Редактирование статьи</h1>
     
     {% if error %}
         <div class="error" style="color: red; margin-bottom: 15px;">{{ error }}</div>
@@ -11,21 +11,17 @@
     
     <form method="post">
         <div class="form-group">
-            <label>
-                Название статьи:
-                <input type="text" name="title" maxlength="50" required>
-            </label>
+            <label for="title">Название статьи:</label>
+            <input type="text" id="title" name="title" value="{{ article['title'] }}" maxlength="50" required>
         </div>
 
         <div class="form-group">
-            <label>
-                Текст статьи:
-                <textarea name="article_text" rows="10" required></textarea>
-            </label>
+            <label for="article_text">Текст статьи:</label>
+            <textarea id="article_text" name="article_text" rows="10" required>{{ article['article_text'] }}</textarea>
         </div>
 
         <div class="form-actions">
-            <button type="submit" class="btn btn-primary">Создать статью</button>
+            <button type="submit" class="btn btn-primary">Сохранить изменения</button>
             <a href="/lab5/list" class="btn btn-secondary">Отмена</a>
         </div>
     </form>
@@ -49,7 +45,6 @@
             border-radius: 5px;
             font-size: 1em;
             box-sizing: border-box;
-            margin-top: 5px;
         }
         
         textarea {
@@ -74,7 +69,7 @@
         }
         
         .btn-primary {
-            background: #3498db;
+            background: #27ae60;
             color: white;
         }
         
