--- a/templates/lab6/lab6.html
+++ b/templates/lab6/lab6.html
@@ -28,9 +28,11 @@ function getOfficeList() {
         for(let i = 0; i < office_list.length; i++) {
             const office = office_list[i];
             const li = document.createElement('li');
+
+            const currentUser = '{{ session.get("login", "") }}';
+            
             li.innerText = `${office.number}: ${office.tenant || 'свободен'}`;
 
-            // Добавляем кнопку бронирования только для свободных офисов
             if (!office.tenant) {
                 const bookingButton = document.createElement('button');
                 bookingButton.innerText = 'зарезервировать';
@@ -38,6 +40,13 @@ function getOfficeList() {
                     booking(office.number); 
                 };
                 li.appendChild(bookingButton);
+            } else if (office.tenant === currentUser) {
+                const cancelButton = document.createElement('button');
+                cancelButton.innerText = 'освободить';
+                cancelButton.onclick = function() { 
+                    cancellation(office.number); 
+                };
+                li.appendChild(cancelButton);
             }
 
             ul.appendChild(li);
@@ -82,6 +91,46 @@ function booking(officeNumber) {
     });
 }
 
+function cancellation(officeNumber) {
+    const url = '/lab6/json-rpc-api/';
+    const json = {
+        'jsonrpc': '2.0',
+        'method': 'cancellation',
+        'params': officeNumber,
+        'id': Math.round(Math.random() * 1000)
+    };
+
+    fetch(url, {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify(json)
+    })
+    .then(function(response) {
+        return response.json()
+    })
+    .then(function(data) {
+        if(data.error) {
+            switch(data.error.code) {
+                case 1:
+                    alert('Вы не авторизованы, пожалуйста, авторизуйтесь');
+                    break;
+                case 3:
+                    alert('Офис не арендован');
+                    break;
+                case 4:
+                    alert('Вы можете отменять только свою аренду');
+                    break;
+                case -32601:
+                    alert('Странная ошибка');
+                    break;
+            }
+        } else {
+            document.getElementById('office-list').innerHTML = '';
+            getOfficeList();
+        }
+    });
+}
+
 document.addEventListener('DOMContentLoaded', function() {
     getOfficeList();
 });
@@ -90,5 +139,10 @@ document.addEventListener('DOMContentLoaded', function() {
 
 {% block main %}
     <h1>Список кабинетов</h1>
+    {% if session.get('login') %}
+        <p>Вы вошли как: <strong>{{ session.get('login') }}</strong></p>
+    {% else %}
+        <p style="color: red;">Вы не авторизованы. Для бронирования офисов необходимо авторизоваться.</p>
+    {% endif %}
     <ul id="office-list"></ul>
 {% endblock %}
