Получение информации о фильме/-ах по REST

--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Лабораторная работа 7</h1>
+        <h1>Лабораторная работа 7 - REST API для фильмов</h1>
         <nav>
             <a href="{{ url_for('index') }}">На главную</a>
         </nav>
@@ -16,8 +16,19 @@
 
     <main>
         <section>
-            <h2>Заготовка для лабораторной работы 7</h2>
-            <p>Содержимое лабораторной работы будет добавлено позже.</p>
+            <h2>REST API эндпоинты</h2>
+            <ul>
+                <li><strong>GET /lab7/rest-api/films/</strong> - получить все фильмы</li>
+                <li><strong>GET /lab7/rest-api/films/&lt;id&gt;</strong> - получить фильм по ID</li>
+            </ul>
+            
+            <h3>Примеры:</h3>
+            <ul>
+                <li><a href="/lab7/rest-api/films/" target="_blank">Все фильмы</a></li>
+                <li><a href="/lab7/rest-api/films/0" target="_blank">Фильм с ID 0</a></li>
+                <li><a href="/lab7/rest-api/films/1" target="_blank">Фильм с ID 1</a></li>
+                <li><a href="/lab7/rest-api/films/10" target="_blank">Фильм с ID 10 (ошибка 404)</a></li>
+            </ul>
         </section>
     </main>
 
