Удаление выбранного фильма по REST

--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -20,20 +20,20 @@
             <ul>
                 <li><strong>GET /lab7/rest-api/films/</strong> - получить все фильмы</li>
                 <li><strong>GET /lab7/rest-api/films/&lt;id&gt;</strong> - получить фильм по ID</li>
+                <li><strong>DELETE /lab7/rest-api/films/&lt;id&gt;</strong> - удалить фильм по ID</li>
             </ul>
             
-            <h3>Примеры:</h3>
+            <h3>Примеры для тестирования:</h3>
             <ul>
                 <li><a href="/lab7/rest-api/films/" target="_blank">Все фильмы</a></li>
                 <li><a href="/lab7/rest-api/films/0" target="_blank">Фильм с ID 0</a></li>
-                <li><a href="/lab7/rest-api/films/1" target="_blank">Фильм с ID 1</a></li>
                 <li><a href="/lab7/rest-api/films/10" target="_blank">Фильм с ID 10 (ошибка 404)</a></li>
             </ul>
         </section>
     </main>
 
     <footer>
-        &copy; 2025 Фомченко Роман
+        &copy; 2024 Ваше Имя
     </footer>
 </body>
 </html>
