--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -1,39 +1,30 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лабораторная работа 7</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-</head>
-<body>
-    <header>
-        <h1>Лабораторная работа 7 - REST API для фильмов</h1>
-        <nav>
-            <a href="{{ url_for('index') }}">На главную</a>
-        </nav>
-    </header>
+{% extends "base.html" %}
 
-    <main>
-        <section>
-            <h2>REST API эндпоинты</h2>
-            <ul>
-                <li><strong>GET /lab7/rest-api/films/</strong> - получить все фильмы</li>
-                <li><strong>GET /lab7/rest-api/films/&lt;id&gt;</strong> - получить фильм по ID</li>
-                <li><strong>DELETE /lab7/rest-api/films/&lt;id&gt;</strong> - удалить фильм по ID</li>
-            </ul>
-            
-            <h3>Примеры для тестирования:</h3>
-            <ul>
-                <li><a href="/lab7/rest-api/films/" target="_blank">Все фильмы</a></li>
-                <li><a href="/lab7/rest-api/films/0" target="_blank">Фильм с ID 0</a></li>
-                <li><a href="/lab7/rest-api/films/10" target="_blank">Фильм с ID 10 (ошибка 404)</a></li>
-            </ul>
-        </section>
-    </main>
+{% block lab %}Лабораторная работа 7{% endblock %}
 
-    <footer>
-        &copy; 2024 Ваше Имя
-    </footer>
-</body>
-</html>
+{% block script %}
+<script src="{{ url_for('static', filename='lab7/main.js') }}"></script>
+{% endblock %}
+
+{% block main %}
+<h1>Список фильмов</h1>
+
+<table>
+    <thead>
+        <tr>
+            <th colspan="2">Название</th>
+            <th>Год</th>
+            <th>Действие</th>
+        </tr>
+    </thead>
+    <tbody id="film-list"></tbody>
+</table>
+
+<div>
+    <button onclick="addFilm()">Добавить фильм</button>
+</div>
+
+<script>
+    fillFilmList();
+</script>
+{% endblock %}
